# tiforth

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md
crates/tiforth-harness-differential/: Cargo.toml
crates/tiforth-harness-differential/src/: first_collation_string_slice.rs  first_decimal128_slice.rs  first_decimal128_slice_tikv.rs  first_decimal128_slice_tikv_live.rs  first_decimal128_slice_tikv_pairwise.rs  first_exchange_slice.rs  first_expression_slice.rs  first_expression_slice_tikv.rs  first_expression_slice_tikv_pairwise.rs  first_filter_is_not_null_live.rs  first_filter_is_not_null_slice.rs  first_filter_is_not_null_slice_tikv.rs  first_filter_is_not_null_slice_tikv_pairwise.rs  first_float64_ordering_slice.rs  first_float64_ordering_slice_tikv.rs  first_float64_ordering_slice_tikv_pairwise.rs  first_json_slice.rs  first_map_slice.rs  first_signed_widening_add_int64_slice.rs  first_struct_slice.rs  first_temporal_date32_slice.rs  first_temporal_date32_slice_tikv.rs  first_temporal_date32_slice_tikv_live.rs  first_temporal_date32_slice_tikv_pairwise.rs  first_temporal_timestamp_tz_slice.rs  first_temporal_timestamp_tz_slice_tikv.rs  first_temporal_timestamp_tz_slice_tikv_live.rs  first_temporal_timestamp_tz_slice_tikv_pairwise.rs  first_union_slice.rs  first_union_slice_tikv.rs  first_union_slice_tikv_live.rs  first_union_slice_tikv_pairwise.rs  first_unsigned_arithmetic_slice.rs  first_unsigned_arithmetic_slice_tikv.rs  first_unsigned_arithmetic_slice_tikv_pairwise.rs  lib.rs
crates/tiforth-kernel/: Cargo.toml
crates/tiforth-kernel/src/: admission.rs  batch.rs  collation.rs  error.rs  expr.rs  filter.rs  handoff.rs  lib.rs  operators.rs  projection.rs  runtime.rs  snapshot.rs
crates/tiforth-kernel/tests/: collation_string_slice.rs  decimal128_slice.rs  exchange_slice.rs  expression_projection.rs  filter_is_not_null.rs  float64_slice.rs  json_slice.rs  map_slice.rs  signed_widening_add_int64_slice.rs  struct_slice.rs  temporal_date32_slice.rs  temporal_timestamp_tz_slice.rs  union_slice.rs  unsigned_arithmetic_slice.rs  widening_add_float64_slice.rs
examples/bundled-arrow/: CMakeLists.txt  README.md
examples/projects/arrow-system-shared__tiforth-system-static/: CMakeLists.txt
examples/projects/arrow-system-static__tiforth-system-static/: CMakeLists.txt
examples/projects/noarrow__tiforth-bundled-shared/: CMakeLists.txt
examples/projects/noarrow__tiforth-system-shared/: CMakeLists.txt
examples/system-arrow/: CMakeLists.txt  README.md
src/tiforth/: CMakeLists.txt  arrow_compute_smoke_test.cpp  collation.cc  collation.h  compiled_expr.cc  engine.cc  expr.cc  function_registry.cc  memory_pool_test.cpp  pass_through_reader_test.cpp  pipeline.cc  pipeline_exec.cc  plan.cc  plan_breaker_test.cpp  smoke_test.cpp  task.cc  task_blocked_state_test.cpp  type_metadata.cc
src/tiforth/detail/: aggregate_function.h  arena.h  arrow_compute.cc  arrow_compute.h  arrow_memory_pool_resource.h  collation_single_key_grouper.cc  collation_single_key_grouper.h  expr_compiler.cc  expr_compiler.h  fixed_key_hash_table.h  fixed_key_hash_table_test.cpp  key_hash_table.h  scratch_bytes.h  small_string_single_key_grouper.cc  small_string_single_key_grouper.h  tidb_collation_lut.cc  (+2 more)
src/tiforth_capi/: CMakeLists.txt  tiforth_capi.cc
tests/: CMakeLists.txt  arrow_array_smoke_test.cpp  arrow_compute_agg_test.cpp  arrow_compute_smoke_test.cpp  collation_compare_test.cpp  comparison_test.cpp  decimal_arithmetic_test.cpp  filter_test.cpp  fixed_key_hash_table_test.cpp  gtest_tiforth_smoke.cpp  hash_agg_test.cpp  hash_join_test.cpp  key_hash_table_test.cpp  logical_test.cpp  memory_pool_test.cpp  mytime_temporal_test.cpp  parallel_hash_agg_pipeline_test.cpp  pass_through_reader_test.cpp  plan_breaker_test.cpp  projection_test.cpp  smoke_test.cpp  sort_test.cpp  spill_hooks_test.cpp  task_blocked_state_test.cpp  test_blocked_resumer.h  test_pilot_op.h  test_pipeline_ops.h  test_pipeline_runner.h  test_task_group_runner.h  tiforth_arrow_compute_agg_test.cpp  tiforth_arrow_hash_agg_test.cpp  tiforth_capi_smoke_test.cpp  tiforth_collation_compare_test.cpp  tiforth_decimal_add_test.cpp  tiforth_filter_test.cpp  tiforth_hash_agg_breaker_test.cpp  tiforth_hash_agg_test.cpp  tiforth_hash_join_test.cpp  tiforth_logical_test.cpp  tiforth_memory_pool_test.cpp  (+12 more)
tests/conformance/: README.md  expression-projection-slice.md  first-collation-string-slice.md  first-decimal128-slice.md  first-exchange-slice.md  first-filter-is-not-null-slice.md  first-float64-ordering-slice.md  first-json-slice.md  first-map-slice.md  first-signed-widening-add-int64-slice.md  first-struct-slice.md  first-temporal-date32-slice.md  first-temporal-timestamp-tz-slice.md  first-union-slice.md  first-unsigned-arithmetic-slice.md  first-widening-add-float64-slice.md  local-execution-fixtures.md  milestone-1-arrow-batch-handoff.md  signed-unsigned-interaction-checkpoint.md
tests/differential/: README.md  drift-report-carrier.md  first-collation-string-slice-artifacts.md  first-collation-string-slice.md  first-decimal128-slice-artifacts.md  first-decimal128-slice.md  first-exchange-slice-artifacts.md  first-exchange-slice.md  first-expression-slice-artifacts.md  first-expression-slice.md  first-filter-is-not-null-slice-artifacts.md  first-filter-is-not-null-slice.md  first-float64-ordering-slice-artifacts.md  first-float64-ordering-slice.md  first-json-slice-artifacts.md  first-json-slice.md  first-map-slice-artifacts.md  first-map-slice.md  first-signed-widening-add-int64-slice-artifacts.md  first-signed-widening-add-int64-slice.md  first-struct-slice-artifacts.md  first-struct-slice.md  first-temporal-date32-slice-artifacts.md  first-temporal-date32-slice.md  first-temporal-timestamp-tz-slice-artifacts.md  first-temporal-timestamp-tz-slice.md  first-union-slice-artifacts.md  first-union-slice.md  first-unsigned-arithmetic-slice-artifacts.md  first-unsigned-arithmetic-slice.md  first-widening-add-float64-slice-artifacts.md  first-widening-add-float64-slice.md
tests/perf/: README.md
(+504 files in other folders)
