add_tiforth_test(tiforth_smoke_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_smoke_test.cpp")
add_tiforth_test(tiforth_arrow_array_smoke_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_arrow_array_smoke_test.cpp")
add_tiforth_test(tiforth_arrow_compute_smoke_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_arrow_compute_smoke_test.cpp")
add_tiforth_test(tiforth_pass_through_reader_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_pass_through_reader_test.cpp")
add_tiforth_test(tiforth_filter_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_filter_test.cpp")
add_tiforth_test(tiforth_hash_agg_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_hash_agg_test.cpp")
add_tiforth_test(tiforth_hash_join_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_hash_join_test.cpp")
add_tiforth_test(tiforth_capi_smoke_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_capi_smoke_test.cpp")
target_link_libraries(tiforth_capi_smoke_test PRIVATE tiforth::tiforth_capi)
add_tiforth_test(tiforth_collation_compare_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_collation_compare_test.cpp")
add_tiforth_test(tiforth_memory_pool_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_memory_pool_test.cpp")
add_tiforth_test(tiforth_projection_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_projection_test.cpp")
add_tiforth_test(tiforth_sort_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_sort_test.cpp")
add_tiforth_test(tiforth_spill_hooks_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_spill_hooks_test.cpp")
add_tiforth_test(tiforth_type_metadata_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_type_metadata_test.cpp")
add_tiforth_test(tiforth_mytime_temporal_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_mytime_temporal_test.cpp")
add_tiforth_test(tiforth_decimal_add_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_decimal_add_test.cpp")
add_tiforth_test(tiforth_decimal_arithmetic_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_decimal_arithmetic_test.cpp")
add_tiforth_test(tiforth_numeric_arithmetic_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_numeric_arithmetic_test.cpp")
add_tiforth_test(tiforth_logical_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_logical_test.cpp")
add_tiforth_test(tiforth_comparison_test "${CMAKE_CURRENT_SOURCE_DIR}/tiforth_comparison_test.cpp")
